Replace gem emojis with sprite icons - add UI sprite assets and update GemSelectScreen

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -163,7 +163,8 @@ kbd {
 }
 
 /* Pixel art rendering (for Golden Sun sprites) */
-.pixel-art {
+.pixel-art,
+.pixelated {
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
   image-rendering: crisp-edges;
